--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: add-min-vm-py@ccp-virt-mach-py/infra_actions:latest
+          tags: mistpy/infra_actions:latest
 
 deploy:
     runs-on: ubuntu-latest
@@ -76,7 +76,7 @@ deploy:
         # passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull add-min-vm-py@ccp-virt-mach-py/infra_actions
+          sudo docker pull mistpy/infra_actions
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 add-min-vm-py@ccp-virt-mach-py/infra_actions
+          sudo docker run --rm -d -p 5000:5000 mistpy/infra_actions
