--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,7 @@ jobs:
         - name: Set up Docker Buildx
           # Вызов сборщика контейнеров docker
           uses: docker/setup-buildx-action@v1 
-        - name: mistpy
-          # Login to Docker 
+        - name: Login to Docker 
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
           with:
